# laboral-kutxa.py

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: pypi-release.yml  tests.yml
docs/: how-to-release.md
laboralkutxa/: api.py  cli.py  constants.py
tests/: test_api.py  test_cli.py
