[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "laboral-kutxa"
authors = [
    {name = "Andre Miras"},
]
description = "Unofficial Laboral Kutxa Python library"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["laboral", "kutxa", "bank", "banco"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
packages = ["laboralkutxa"]
